# projetProgProb

./: README.md  byo-ppl.opam  dune-project  rand_triangle.py
_build/: .db  log  (+1 more)
_build/default/: META.byo-ppl  byo-ppl.dune-package  byo-ppl.install  byo-ppl.opam  dune-project
_build/default/.dune/: configurator  configurator.v2
_build/default/byoppl/: byoppl.cma  byoppl.cmxa  byoppl.cmxs  byoppl.ml-gen  distribution.ml  distribution.mli  dune  utils.ml
_build/default/byoppl/.byoppl.objs/: basic.ml.d  byoppl__Infer.impl.all-deps  cps_operators.ml.d  cps_operators.mli.d  distribution.ml.d  distribution.mli.d  infer.ml.d  utils.ml.d
_build/default/byoppl/.byoppl.objs/byte/: byoppl.cmi  byoppl.cmo  byoppl.cmt  byoppl__Basic.cmi  byoppl__Basic.cmo  byoppl__Basic.cmt  byoppl__Cps_operators.cmi  byoppl__Cps_operators.cmo  byoppl__Cps_operators.cmt  byoppl__Cps_operators.cmti  byoppl__Distribution.cmi  byoppl__Distribution.cmo  byoppl__Distribution.cmt  byoppl__Distribution.cmti  byoppl__Infer.cmi  byoppl__Infer.cmo  byoppl__Infer.cmt  byoppl__Utils.cmi  byoppl__Utils.cmo  byoppl__Utils.cmt
_build/default/byoppl/.byoppl.objs/native/: byoppl.cmx  byoppl__Basic.cmx  byoppl__Cps_operators.cmx  byoppl__Distribution.cmx  byoppl__Infer.cmx  byoppl__Utils.cmx
_build/default/byoppl/.merlin-conf/: lib-byo-ppl
_build/default/examples/: hmm.ml  laplace.ml
_build/default/examples/.funny_bernoulli.eobjs/: coin.ml.d  dune__exe.ml-gen  funny_bernoulli.ml.d  hmm.ml.d  laplace.ml.d
_build/default/examples/.merlin-conf/: exe-funny_bernoulli-eb433d71ad50aa144599f6a2713efcdf
(+68 files in other folders)
